--- a/.github/workflows/deployS3.yml
+++ b/.github/workflows/deployS3.yml
@@ -28,6 +28,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: deploy to aws S3
         run: |
-          aws configure set aws_access_key_id ${{ ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ SECRET_ACCESS_KEY }}
+          aws configure set aws_access_key_id ${{ secrets.ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.SECRET_ACCESS_KEY }}
           aws s3 sync .github/index.html s3:// --delete
